@@ -54,7 +54,21 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.22.0-GA</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <resources>
@@ -96,65 +110,67 @@
                 </configuration>
             </plugin>
             
-            <plugin>
-                <groupId>org.moditect</groupId>
-                <artifactId>moditect-maven-plugin</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
-                <executions>
-                    <execution>
-                        <id>add-module-info-to-dependencies</id>
-                        <phase>generate-resources</phase>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
-                            <modules>
-                                <module>
-                                    <artifact>
-                                        <groupId>org.jboss.spec.javax.interceptor</groupId>
-                                        <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
-                                        <version>1.0.0.Final</version>
-                                    </artifact>
-                                    <moduleInfoSource>
-                                         module java.interceptor {
-                                             exports javax.interceptor;
-                                         }
-                                    </moduleInfoSource>>
-                                </module>
-                                <module>
-                                    <artifact>
-                                        <groupId>org.jboss.spec.javax.transaction</groupId>
-                                        <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-                                        <version>1.0.0.Final</version>
-                                    </artifact>
-                                    <moduleInfoSource>
-                                         module java.transaction {
-                                             exports javax.transaction;
-                                             requires java.interceptor;
-                                         }
-                                    </moduleInfoSource>
-                                </module>
-                                <module>
-                                    <artifact>
-                                        <groupId>org.apache.lucene</groupId>
-                                        <artifactId>lucene-misc</artifactId>
-                                        <version>5.5.4</version>
-                                    </artifact>
-                                    <moduleInfo>
-                                        <name>org.apache.lucene.misc</name>
-                                        <exports>
-                                            org.apache.lucene.uninverting;
-                                        </exports>
-                                    </moduleInfo>
-                                </module>
-                                <module>
-                                    <artifact>
-                                        <groupId>${project.groupId}</groupId>
-                                        <artifactId>hibernate-search-engine</artifactId>
-                                        <version>${project.version}</version>
-                                    </artifact>
-                                    <moduleInfo>
-                                        <addServiceUses>true</addServiceUses>
-                                    </moduleInfo>
-                                </module>
+<!--             <plugin> -->
+<!--                 <groupId>org.moditect</groupId> -->
+<!--                 <artifactId>moditect-maven-plugin</artifactId> -->
+<!--                 <version>1.0.0-SNAPSHOT</version> -->
+<!--                 <executions> -->
+<!--                     <execution> -->
+<!--                         <id>add-module-info-to-dependencies</id> -->
+<!--                         <phase>generate-resources</phase> -->
+<!--                         <configuration> -->
+<!--                             <outputDirectory>${project.build.directory}/modules</outputDirectory> -->
+                            
+<!--                             <modules> -->
+<!--                                 <module> -->
+<!--                                     <artifact> -->
+<!--                                         <groupId>org.jboss.spec.javax.interceptor</groupId> -->
+<!--                                         <artifactId>jboss-interceptors-api_1.2_spec</artifactId> -->
+<!--                                         <version>1.0.1.Final</version> -->
+<!--                                     </artifact> -->
+<!--                                     <moduleInfo> -->
+<!--                                         <name>beta.jboss.interceptor.api_1_2</name> -->
+<!--                                     </moduleInfo> -->
+                                    
+<!--                                 </module> -->
+<!--                                 <module> -->
+<!--                                     <artifact> -->
+<!--                                         <groupId>org.jboss.spec.javax.transaction</groupId> -->
+<!--                                         <artifactId>jboss-transaction-api_1.2_spec</artifactId> -->
+<!--                                         <version>2.0.0.Alpha1</version> -->
+<!--                                     </artifact> -->
+<!--                                     <moduleInfo> -->
+<!--                                      </moduleInfo> -->
+<!--                                     <moduleInfoSource> -->
+<!--                                          module java.transaction { -->
+<!--                                              exports javax.transaction; -->
+<!--                                              requires java.interceptor; -->
+<!--                                          } -->
+<!--                                     </moduleInfoSource> -->
+<!--                                 </module> -->
+<!--                                 <module> -->
+<!--                                     <artifact> -->
+<!--                                         <groupId>org.apache.lucene</groupId> -->
+<!--                                         <artifactId>lucene-misc</artifactId> -->
+<!--                                         <version>5.5.4</version> -->
+<!--                                     </artifact> -->
+<!--                                     <moduleInfo> -->
+<!--                                         <name>org.apache.lucene.misc</name> -->
+<!--                                         <exports> -->
+<!--                                             org.apache.lucene.uninverting; -->
+<!--                                         </exports> -->
+<!--                                     </moduleInfo> -->
+<!--                                 </module> -->
+<!--                                 <module> -->
+<!--                                     <artifact> -->
+<!--                                         <groupId>${project.groupId}</groupId> -->
+<!--                                         <artifactId>hibernate-search-engine</artifactId> -->
+<!--                                         <version>${project.version}</version> -->
+<!--                                     </artifact> -->
+<!--                                     <moduleInfo> -->
+<!--                                         <addServiceUses>true</addServiceUses> -->
+<!--                                     </moduleInfo> -->
+<!--                                 </module> -->
 <!--                                 <module> -->
 <!--                                     <artifact> -->
 <!--                                         <groupId>org.glassfish</groupId> -->
@@ -216,12 +232,12 @@
 <!--                                         </requires> -->
 <!--                                     </moduleInfo> -->
 <!--                                 </module> -->
-                            </modules>
-                        </configuration>
-                        <goals>
-                            <goal>add-module-info</goal>
-                        </goals>
-                    </execution>
+<!--                             </modules> -->
+<!--                         </configuration> -->
+<!--                         <goals> -->
+<!--                             <goal>add-module-info</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
 <!--                     <execution> -->
 <!--                         <id>add-module-info-to-test</id> -->
 <!--                         <phase>package</phase> -->
@@ -245,9 +261,34 @@
 <!--                             <goal>add-module-info</goal> -->
 <!--                         </goals> -->
 <!--                     </execution> -->
-                </executions>
-</plugin>
+<!--                 </executions> -->
+<!-- </plugin> -->
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.6.0</version>
+                    <configuration>
+                        <executable>java</executable>
+                        <arguments>
+                            <argument>--module-path</argument> <!-- or -p  -->
+                            <!-- automatically creates the modulepath using all project dependencies,
+                            also adding the project build directory -->
+                            <modulepath/>
+                            <argument>--upgrade-module-path</argument>
+                            <argument>/Users/gunnar/.m2/repository/org/jboss/spec/javax/transaction/jboss-transaction-api_1.2_spec/2.0.0.Alpha1</argument>
+                            <argument>--add-modules</argument>
+                            <argument>java.xml.bind</argument>
+                            <argument>-ea</argument>
+                            <argument>--module</argument> <!-- or -m -->
+                            <argument>hibernate.search.integrationtest.jdk9.modules.client/org.hibernate.search.test.integration.jdk9_modules.client.service.MyEntityServiceMain</argument>
+                          </arguments>
+                      </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
 
